--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --backgroundWhite: #FFFBEE;
     --textBlack: #2f292a;
     --red: #CD422D;
+    --pink:#FADDDD;
 
     --lightYellow:#EAC449 ;
     --yellow: #CCAE4D;
@@ -32,7 +33,7 @@ body{
 }
 
 /*TYPOGRAPHY*/
-h1, h2, h3, h4, h5, button{
+h1, h2, h3, h4, h5, button, #submit-btn{
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
     font-weight: 600;
@@ -54,7 +55,7 @@ h3{
 h4{
     font-size: 24px;
 }
-h5, button{
+h5, button, #submit-btn{
     font-size: 20px;
 }
 p{
@@ -74,7 +75,18 @@ p{
     justify-content: center;
     align-content: space-between;
 }
-
+.flex-row-wrap-container{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+.flex-centered{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 /*GRID CONTAINER CLASSES*/
 
 
@@ -127,27 +139,36 @@ header{
 } */
 
 /*HERO SECTION*/
-#hero-sect-text{
+/* button:hover{
+    cursor: pointer;
+} */
+#hero-col-left{
     /* margin:0px 20px 0px 0px; */
     margin-right: 20px;
 }
 
-#hero-sect-text p{
+#hero-col-left p{
     margin:0px 0px 30px 0px;
 }
 
-#hero-sect-text button{
+#hero-col-left button, #submit-btn{
     background-color: var(--lightBlue);
     color: var(--darkBlue);
-    width:270px;
+    width:40%;
     height:45px;
+    margin-right:20px;
+    min-width: 200px;
     text-align: center;
     border-radius: 10px;
     border:2px solid var(--darkBlue);
     box-shadow:4px 4px 4px rgba(51, 46, 46, 0.25);
 }
+#hero-col-left button:hover, #submit-btn:hover{
+    cursor:pointer;
+    background-color:#d0f6ff;
+}
 
-#hero-sect-img img{
+#hero-col-right img{
     /* height:280px - 4px; width of parent div minus width of surrounding images borders */
     border-radius: 20px;
     border:2px solid var(--darkBlue);
@@ -221,6 +242,49 @@ hr{
 }
 
 
+/*LETS CONNECT*/
+#connect{
+    /* display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;; */
+    padding:20px;
+    width:75%;
+    max-width: 500px;
+    /* background-color: var(--lightBlue); */
+    border-radius: 20px;
+    border:2px solid var(--darkBlue);
+    box-shadow:4px 4px 4px rgba(51, 46, 46, 0.25);
+}
+#connect h2{
+    text-align: center;
+}
+form{
+    text-align:left;
+}
+
+form input, form textarea{
+    margin-bottom:20px;
+    width:calc(100% - 4px);
+    height:30px;
+    border-radius:10px;
+    border:2px solid var(--darkBlue);
+    background-color: var(--backgroundWhite);
+}
+
+form textarea{
+    height:50px;
+    padding:10px;
+    width: calc(100% - 24px);
+}
+
+#submit-btn{
+    width:100%;
+}
+
+
+
+
 /*FOOTER*/
 footer{
     background-color:var(--darkBlue);
@@ -280,7 +344,7 @@ footer{
     /*Class applied to every body section besides header/footer*/
     .body-content{
         margin:30px 16px;
-        width:calc(100%-32px);
+        width:calc(100% - 32px);
         /* max-width: 1140px; */
         display:flex;
         align-items: center;
